--- a/.env
+++ b/.env
@@ -22,7 +22,9 @@ LOCAL_MAIL_HOST="27.123.25.1"
 LOCAL_MAIL_PORT="25"
 LOCAL_MAIL_USERNAME="rafael@sushidigital.com.au"
 LOCAL_MAIL_PASSWORD="spUyA+U=awru"
-LOCAL_MAIL_ENCRYPTION="tls"
+# Set encryption to empty for it to work on localhost 
+# See: https://laracasts.com/discuss/channels/general-discussion/smtp-mail
+LOCAL_MAIL_ENCRYPTION=""
 LOCAL_MAIL_SENDMAIL="'C:\xampp\sendmail\sendmail.exe' -t"
 
 
