--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "filp/whoops": "~1.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+		"pusher/pusher-php-server": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
